# CLAlign

./: CLAlign.ipynb  README.md  pair.txt  pyproject.toml  setup.py
CLAlignT5/: adapter_config.json
clalign/: __init__.py  alignment.py  contrastive.py  main.py  metrics.py  plm.py
clalign/CLAlignT5/: README.md
data/: malidup.csv  malisam.csv  scope40-2.01-test.fasta
data/malidup/: README  dup.txt  note.doc
data/malidup/d19hca_/: 19hc.dali.ali  19hc.fast.ali  19hc.manual.ali  19hc.tm.ali
data/malidup/d1a4pa_/: 1a4p.dali.ali  1a4p.fast.ali  1a4p.manual.ali  1a4p.tm.ali
data/malidup/d1a4sa_/: 1a4s.dali.ali  1a4s.fast.ali  1a4s.manual.ali  1a4s.tm.ali
data/malidup/d1a6da1/: 1a6d.dali.ali  1a6d.fast.ali  1a6d.manual.ali  1a6d.tm.ali
data/malidup/d1a8l_1/: 1a8l.dali.ali  1a8l.fast.ali  1a8l.manual.ali  1a8l.tm.ali
data/malidup/d1af2a1/: 1af2.dali.ali  1af2.fast.ali  1af2.manual.ali  1af2.tm.ali
data/malidup/d1afwb1/: 1afw.dali.ali  1afw.fast.ali  1afw.manual.ali  1afw.tm.ali
data/malidup/d1ahja_/: 1ahj.dali.ali  1ahj.fast.ali  1ahj.manual.ali  1ahj.tm.ali
data/malidup/d1ahua1/: 1ahu_1.dali.ali  1ahu_1.fast.ali  1ahu_1.manual.ali  1ahu_1.tm.ali  1ahu_2.manual2.ali
data/malidup/d1ai3__/: 1ai3.dali.ali  1ai3.fast.ali  1ai3.manual.ali  1ai3.tm.ali
data/malidup/d1aj8a_/: 1aj8.dali.ali  1aj8.fast.ali  1aj8.manual.ali  1aj8.tm.ali
data/malidup/d1ako__/: 1ako.dali.ali  1ako.fast.ali  1ako.manual.ali  1ako.tm.ali
data/malidup/d1ala___1/: 1ala_A1A2.fast.ali  1ala_A1A2.manual.ali  1ala_A1A2.tm.ali
data/malidup/d1ala___2/: 1ala_A2A3.dali.ali  (+3 more)
(+1653 files in other folders)
